--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     }
 
     div {
-      width: 100%;
+      width: 100vw;
+      overflow: auto;
     }
 
   </style>
@@ -97,7 +98,9 @@
 
     <hr />
     <hr />
+  </div>
 
+  <div>
     <table cellspacing='15px' cellpadding="10px">
       <tr>
         <th>name </th>
